--- a/Server/package.json
+++ b/Server/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "helmet": "^6.1.5",
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1"
   },
