Started on sessions

--- a/Server/.env
+++ b/Server/.env
@@ -8,3 +8,5 @@ USER_MAIL=user@naruto.com
 USER_PASSWORD=Narutoisawesome
 SECOND_USER_MAIL=user@sasuke.com
 SECOND_USER_PASSWORD=Sasukeiscool
+
+SECRET_SESSION=
