Made creator page and users page + started on logout

--- a/Server/.env
+++ b/Server/.env
@@ -9,4 +9,4 @@ USER_PASSWORD=Narutoisawesome
 SECOND_USER_MAIL=user@sasuke.com
 SECOND_USER_PASSWORD=Sasukeiscool
 
-SECRET_SESSION=
+SECRET_SESSION=123
